[package]
name = "eventedco"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[lib]
name = "eventedco"

[[bin]]
name = "tcp-echo"
path = "src/bin/tcp-echo.rs"

[[bin]]
name = "http-echo"
path = "src/bin/http-echo.rs"

[dependencies]
#mio = "*"
coroutine = "*"
log = "*"
env_logger = "*"
clap = "*"
hyper = "*"
openssl = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
