[package]
name = "eventedco"
version = "0.1.0"
authors = ["Y. T. Chung <zonyitoo@gmail.com>"]

[lib]
name = "eventedco"

[dependencies]
#mio = "*"
coroutine = "*"
log = "*"
env_logger = "*"
clap = "*"
hyper = "*"
openssl = "*"
rand = "*"

[dependencies.mio]
git = "https://github.com/carllerche/mio.git"
